--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Order summary card</title>
 </head>
 <body>
-    <div class="bg-conatiner d-flex flex-row justify-content-center">
+    <main>   
         <div class="card">
             <img src="images/illustration-hero.svg" alt="illustration-hero-image">
             <div class="card-details">
@@ -17,14 +17,14 @@
                     <h3>Order Summary</h3>
                     <p>You can now listen to millions of songs, audiobooks and podcaasts on any device anywhere you like!</p>
                 </div>  
-                
+                    
                 <div class="card-price-plans d-flex flex-row justify-content-between">
                     <div class="pricing d-flex flex-row">
-                      <img src="images/icon-music.svg" alt="music-logo-img">
-                      <div class="pricing-content">
+                    <img src="images/icon-music.svg" alt="music-logo-img">
+                    <div class="pricing-content">
                         <p class="pricing-content1">Annual Plan</p>
                         <p class="pricing-content2">$59.99/year</p>
-                      </div>
+                    </div>
                     </div>
                     <a href="#" style="text-decoration:underline; color: hsl(245, 75%, 52%); font-size: .7rem; font-weight: bold; position: relative; top:30px; right: 24px;">Change</a>
                 </div>
@@ -34,10 +34,9 @@
                     <button class="cancel-order-button0">Cancel Order</button>
                 </div>
 
-           </div>
+            </div>
         </div>
-    </div>
-
+    </main>
     <div class="attribution text-right">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Anubhav Singh</a>.
